<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/login_background_desc"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/register_background" />

    <ImageView
        android:id="@+id/register_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        app:srcCompat="@drawable/main_icon"
        android:contentDescription="@string/login_icon_desc" />

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:paddingTop="170dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:paddingBottom="20dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/TW_login"/>

        <EditText
            android:id="@+id/ET_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:backgroundTint="@color/black"
            android:textCursorDrawable="@color/start_btn"
            android:inputType="text"
            android:hint="@string/ET_login_hint" />

        <EditText
            android:id="@+id/ET_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:backgroundTint="@color/black"
            android:textCursorDrawable="@color/start_btn"
            android:inputType="textPassword"
            android:hint="@string/ET_login_pwd" />
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:background="@drawable/style_register_btn_action"
        android:textSize="30sp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/BTN_login_text" />

    <TextView
        android:id="@+id/TW_login_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:textSize="20sp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/TW_login_to_register_text"/>
</RelativeLayout>